# text-fixer

./: README.md  package-lock.json  package.json  prompt.txt  vite.config.js
src/: app.html  styles.css  types.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  window_ops.rs
src/components/icons/: AiLogo.svelte
src/routes/: +page.svelte
