[package]
name = "text-fixer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "text_fixer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2.2.7"
tauri-plugin-positioner = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
arboard = "3.5.0"
rdev = "0.5.3"
windows = "0.61.3"
regex = "1.11.1"
image = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

tauri-plugin-clipboard-manager = "2.2.3"
x-win = "5.1"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"
objc  = "0.2"
libc = "0.2.174"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"], optional = true }
